# django-paddle-mor

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
django_paddle_mor/: __init__.py  admin.py  apps.py  checks.py  client.py  event_handlers.py  exceptions.py  helpers.py  notifications.py  permission_validation.py  registry.py  sanitization.py  settings.py  signals.py  subscriber.py  sync.py  urls.py  views.py
django_paddle_mor/management/commands/: clear_paddle_webhook_events.py  link_paddle_customers.py  reprocess_paddle_webhooks.py  sync_paddle_resources.py
django_paddle_mor/migrations/: 0001_initial.py  0002_webhookevent_sync_error.py  0003_webhookendpoint_webhookevent_last_error_at_and_more.py  0004_customer_custom_data_customer_email_customer_locale_and_more.py  0005_customer_subscriber_model_label_and_more.py  0006_backfill_typed_resource_fields.py
django_paddle_mor/models/: __init__.py  base.py  events.py  resources.py
tests/: conftest.py  paddle_test_support.py  settings.py  test_api_key_notifications.py  test_helpers.py  test_operator_integration.py  test_permission_validation.py  test_settings.py  test_sync.py  test_webhook_lifecycle.py  test_webhooks.py  urls.py
