[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-paddle-mor"
version = "0.1.0"
description = "Django + Paddle Billing made easy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "Django>=5.0",
  "paddle-python-sdk",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.0",
  "pytest-django>=4.8",
  "ruff>=0.6",
  "tox>=4.28",
]

[tool.hatch.build.targets.wheel]
packages = ["django_paddle_mor"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"django_paddle_mor/migrations/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
exclude = ["^django_paddle_mor/migrations/"]
show_error_codes = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["django", "django.*", "paddle_billing", "paddle_billing.*"]
ignore_missing_imports = true
